move all current dto files to model