@@ -9,7 +9,7 @@ package org.gridsuite.modification.modifications;
 import com.fasterxml.jackson.core.type.TypeReference;
 import com.powsybl.iidm.network.*;
 import com.powsybl.iidm.network.extensions.IdentifiableShortCircuit;
-import org.gridsuite.modification.dto.*;
+import org.gridsuite.modification.model.*;
 import org.gridsuite.modification.utils.NetworkCreation;
 
 import java.util.*;
@@ -21,8 +21,8 @@ import static org.junit.jupiter.api.Assertions.*;
  * @author Ayoub LABIDI <ayoub.labidi at rte-france.com>
  */
 class LineAttachToNewVoltageLevelTest extends AbstractNetworkModificationTest {
-    private static LineCreationInfos getAttachmentLine() {
-        return LineCreationInfos.builder()
+    private static LineCreationModel getAttachmentLine() {
+        return LineCreationModel.builder()
                 .stashed(false)
                 .equipmentId("attachmentLine")
                 .r(50.6)
@@ -30,16 +30,16 @@ class LineAttachToNewVoltageLevelTest extends AbstractNetworkModificationTest {
                 .build();
     }
 
-    private static VoltageLevelCreationInfos getAttachmentPoint() {
-        return VoltageLevelCreationInfos.builder()
+    private static VoltageLevelCreationModel getAttachmentPoint() {
+        return VoltageLevelCreationModel.builder()
                 .equipmentId("AttPointId")
                 .stashed(false)
                 .nominalV(0)
-                .substationCreation(SubstationCreationInfos.builder().stashed(false)
+                .substationCreation(SubstationCreationModel.builder().stashed(false)
                         .equipmentId("attachmentPointSubstation")
                         .equipmentName("attachmentPointSubstationName")
                         .country(Country.FR)
-                        .properties(List.of(FreePropertyInfos.builder()
+                        .properties(List.of(FreePropertyModel.builder()
                                 .added(true)
                                 .name("substationProp")
                                 .value("valueSubstation")
@@ -51,7 +51,7 @@ class LineAttachToNewVoltageLevelTest extends AbstractNetworkModificationTest {
                 .ipMax(20.0)
                 .busbarCount(1)
                 .sectionCount(1)
-                .properties(List.of(FreePropertyInfos.builder()
+                .properties(List.of(FreePropertyModel.builder()
                         .added(true)
                         .name("voltageLevelProp")
                         .value("valueVoltageLevel")
@@ -59,8 +59,8 @@ class LineAttachToNewVoltageLevelTest extends AbstractNetworkModificationTest {
                 .build();
     }
 
-    private static VoltageLevelCreationInfos getNewVoltageLevel() {
-        return VoltageLevelCreationInfos.builder()
+    private static VoltageLevelCreationModel getNewVoltageLevel() {
+        return VoltageLevelCreationModel.builder()
                 .stashed(false)
                 .equipmentId("newVoltageLevel")
                 .equipmentName("NewVoltageLevel")
@@ -73,8 +73,8 @@ class LineAttachToNewVoltageLevelTest extends AbstractNetworkModificationTest {
                 .busbarCount(2)
                 .sectionCount(2)
                 .switchKinds(List.of(SwitchKind.BREAKER))
-                .couplingDevices(Collections.singletonList(CouplingDeviceInfos.builder().busbarSectionId1("1A").busbarSectionId2("1B").build()))
-                .properties(List.of(FreePropertyInfos.builder()
+                .couplingDevices(Collections.singletonList(CouplingDeviceModel.builder().busbarSectionId1("1A").busbarSectionId2("1B").build()))
+                .properties(List.of(FreePropertyModel.builder()
                         .added(true)
                         .name("newVoltageLevelProp")
                         .value("newVoltageLevelValue")
@@ -88,8 +88,8 @@ class LineAttachToNewVoltageLevelTest extends AbstractNetworkModificationTest {
     }
 
     @Override
-    protected ModificationInfos buildModification() {
-        return LineAttachToVoltageLevelInfos.builder()
+    protected ModificationModel buildModification() {
+        return LineAttachToVoltageLevelModel.builder()
                 .stashed(false)
                 .lineToAttachToId("line3")
                 .percent(20.0)
@@ -148,9 +148,9 @@ class LineAttachToNewVoltageLevelTest extends AbstractNetworkModificationTest {
     }
 
     @Override
-    protected void testCreationModificationMessage(ModificationInfos modificationInfos) throws Exception {
-        assertEquals("LINE_ATTACH_TO_VOLTAGE_LEVEL", modificationInfos.getMessageType());
-        Map<String, String> createdValues = mapper.readValue(modificationInfos.getMessageValues(), new TypeReference<>() { });
+    protected void testCreationModificationMessage(ModificationModel modificationModel) throws Exception {
+        assertEquals("LINE_ATTACH_TO_VOLTAGE_LEVEL", modificationModel.getMessageType());
+        Map<String, String> createdValues = mapper.readValue(modificationModel.getMessageValues(), new TypeReference<>() { });
         assertEquals("line3", createdValues.get("lineToAttachToId"));
     }
 
